tests/negative/list_cstyle_for_oob_index_assign.far
fun main() -> i64 {
  lst: List<i64> = List<i64>()
  for (i = 0; i < 2; i = i + 1) {
    lst.push(i + 10)
  }
  lst[2] = 99
  return 0
}
